--- a/frontend/src/app/me/components/me.css
+++ b/frontend/src/app/me/components/me.css
@@ -725,6 +725,14 @@
   margin-bottom: 26px;
 }
 
+.post-title-content {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 39px;
+}
+
 .post-content h3 {
   font-size: 1.25rem;
   color: var(--color-text);
@@ -735,10 +743,14 @@
 
 .short-text {
   display: inline-block;
-  width: 8ch;          /* about 8–10 characters wide */
-  white-space: nowrap; /* keep it on one line */
-  overflow: hidden;    /* hide the rest */
-  text-overflow: ellipsis; /* add "..." at the end */
+  width: 8ch;
+  /* about 8–10 characters wide */
+  white-space: nowrap;
+  /* keep it on one line */
+  overflow: hidden;
+  /* hide the rest */
+  text-overflow: ellipsis;
+  /* add "..." at the end */
 }
 
 .post-content p {
