--- a/frontend/src/app/me/components/me.html
+++ b/frontend/src/app/me/components/me.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="post-content text-break">
+                <label for="post-content text-break short-text">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         viewBox="0 0 16 16">
                         <path
@@ -143,7 +143,7 @@
         <div>
             <div class="row g-4">
                 @for(post of userPosts; track post.postUuid) {
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <div class="col-12 col-sm-6 col-md-4">
                     <div class="post-card" (click)="navigateToPost(post.postUuid)">
                         <!-- Post with image(s) - Image as background with overlay -->
                         @if(post.mediaPaths && post.mediaPaths.length > 0) {
@@ -157,7 +157,7 @@
                                 <video [src]="'http://localhost:8080/' + post.mediaPaths[0].path"></video>
                                 }
                                 <div class="post-image-overlay">
-                                    <h3 class="post-title-overlay text-break">{{post.title}}</h3>
+                                    <h3 class="post-title-overlay text-break post-preview">{{post.title}}</h3>
                                 </div>
                             </div>
                             <div class="py-3 px-4 bg-body">
@@ -216,10 +216,10 @@
                                 </div>
                             </div>
 
-                            <div class="post-content text-break">
-                                <h3>{{post.title}}</h3>
-                                <p class="post-preview text-break">{{post.content}}...</p>
-                            </div>
+                        <div class="post-title-content">
+                            <h3 class="post-title text-break post-preview">{{post.title}}</h3>
+                            <p class="text-break post-preview">{{post.content}}</p>
+                        </div>
 
                             <div class="post-actions" (click)="$event.stopPropagation()">
                                 <button class="action-btn like-btn" (click)="handleLike($event, post.postUuid)">
