--- a/frontend/src/app/post/components/post-card/post-card.html
+++ b/frontend/src/app/post/components/post-card/post-card.html
@@ -207,7 +207,7 @@
                 <button class="btn-close" (click)="onReport()"></button>
             </div>
 
-            <textarea name="report" placeholder="Describe the problem..." #reportData></textarea>
+            <textarea name="report" maxlength="200" placeholder="Describe the problem..." #reportData></textarea>
 
             <div class="report-actions">
                 <button class="btn btn-secondary btn-sm" (click)="onReport()">Cancel</button>
