--- a/frontend/src/app/post/components/post-card/post-card.html
+++ b/frontend/src/app/post/components/post-card/post-card.html
@@ -6,7 +6,7 @@
             <div class="post-author-info">
                 <div class="author-avatar" (click)="moveToProfile(post.userUuid)">
                     @if(post.profileImagePath) {
-                    <img [src]="'${apiUrl}' + '/' + post.profileImagePath"
+                    <img [src]="apiUrl + '/' + post.profileImagePath"
                         alt="{{ post.userName }}" class="author-avatar-img">
                     }
                     @if(!post.profileImagePath) {
@@ -30,10 +30,10 @@
             @for(media of post.mediaPaths; track media) {
             <div>
                 @if(isImage(media.type)) {
-                <img [src]="'${apiUrl}' + '/' + media.path" width="300" />
+                <img [src]="apiUrl + '/' + media.path" width="300" />
                 }
                 @if(isVideo(media.type)) {
-                <video [src]="'${apiUrl}' + '/' + media.path" controls
+                <video [src]="apiUrl + '/' + media.path" controls
                     width="300"></video>
                 }
             </div>
@@ -68,7 +68,7 @@
                     <div class="comment-input-wrapper">
                         <div class="user-avatar">
                             @if(profileData.profileImagePath) {
-                            <img [src]="'${apiUrl}' + '/' + profileData.profileImagePath" alt="Your avatar">
+                            <img [src]="apiUrl + '/' + profileData.profileImagePath" alt="Your avatar">
                             }
                             @if(!profileData.profileImagePath) {
                             <div class="avatar-placeholder">
@@ -95,7 +95,7 @@
                     @for(instantComment of instantComments; track instantComment) {
                     <div class="comment-card new-comment">
                         <div class="comment-avatar" (click)="moveToProfile(instantComment.userUuid)">
-                            <img [src]="'${apiUrl}' + '/' + instantComment.image" class="avatar-placeholder"
+                            <img [src]="apiUrl + '/' + instantComment.image" class="avatar-placeholder"
                                 alt="">
                         </div>
                         <div class="comment-content">
@@ -116,7 +116,7 @@
                         @for(c of comment?.comments; track c.uuid) {
                         <div class="comment-card">
                             <div class="comment-avatar" (click)="moveToProfile(c.userUuid)">
-                                <img [src]="'${apiUrl}' + '/' + c?.imageProfile" class="avatar-placeholder"
+                                <img [src]="apiUrl + '/' + c?.imageProfile" class="avatar-placeholder"
                                     alt="">
                             </div>
                             <div class="comment-content">
